src/assets/styles.css
.lx-main-button .lx-logo img {
  height: 42px;
  display: none;
  flex-shrink: 0;
}

.lx-theme-dark .lx-logo img#logo-dark {
  display: block;
}

.lx-theme-light .lx-logo img#logo-light {
  display: block;
}

.lx-theme-contrast .lx-logo img#logo-contrast {
  display: block;
}

.lx-cover .lx-logo img {
  display: block;
}

.lx-form-grid>.lx-main {
  overflow-x: auto;
}

.pre {
  white-space: pre;
  font-family: monospace;
}

